--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -21,7 +21,7 @@ Drug = drugBankId, name
 HetGroup = hetId
 Enzyme = ecNumber
 ScopClassification = sid
-CompoundGroup = inchiKey, name
+CompoundGroup = identifier, name
 Compound = identifier, name
 
 #Should be comment out for external server
