--- a/targetmine/dbmodel/resources/keyword_search.properties
+++ b/targetmine/dbmodel/resources/keyword_search.properties
@@ -4,7 +4,7 @@ index.references.OntologyTerm = synonyms
 #index.references.Gene = pathways proteins.proteinDomains goAnnotation.ontologyTerm
 #index.references.Protein = proteinDomains
 
-index.ignore = Comment CrossReference Location OntologyAnnotation OntologyRelation Sequence Synonym Publication Homologue BindingSiteInfo DrugProteinInteraction Author
+index.ignore = Comment CrossReference Location OntologyAnnotation OntologyRelation Sequence Synonym Publication Homologue BindingSiteInfo DrugProteinInteraction Author CompoundGroupInteraction 
 
 index.facet.single.Category = Category
 index.facet.single.Organism = organism.shortName
