--- a/flymine/dbmodel/resources/class_keys.properties
+++ b/flymine/dbmodel/resources/class_keys.properties
@@ -7,20 +7,20 @@ DataSet = name
 DataSource = name
 ChromosomalDeletion = primaryIdentifier, secondaryIdentifier
 CrossReference = identifier
-Disease = omimId
-Gene = symbol, name, GLEANRsymbol
-Interaction = shortName
+Gene = symbol, name, ncbiGeneNumber
+Interaction = shortName name
 InteractionExperiment = name
 MRNAExpressionTerm = name
 MicroArrayAssay = name
 Motif = primaryIdentifier
 OntologyTerm = identifier, name
 Organism = name, shortName, taxonId
-Pathway = identifier
+Pathway = identifier, name
 PhenotypeAnnotation = description
 Protein = primaryAccession
+ProteinDomain = primaryIdentifier, name
 ProteinStructure = identifier
 Protocol = name
 Publication = pubMedId
+RNAiScreen = name
 Transcript = primaryIdentifier
-
