several bug fix and add 3 sources including gwas, tm-kegg-pathway, tm-kegg-orthology
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@930 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -115,13 +115,13 @@ intermines.flymine.frontcolor=#FFF
 intermines.flymine.defaultValues=D. melanogaster
 intermines.flymine.defaultMapping=remote
 
-intermines.ratmine.url=http://ratmine.mcw.edu/ratmine
-intermines.ratmine.name=RatMine
-intermines.ratmine.logo=ratmine_logo.png
-intermines.ratmine.bgcolor=#ABC2DA
-intermines.ratmine.frontcolor=#000
-intermines.ratmine.defaultValues=R. norvegicus
-intermines.ratmine.defaultMapping=remote
+#intermines.ratmine.url=http://ratmine.mcw.edu/ratmine
+#intermines.ratmine.name=RatMine
+#intermines.ratmine.logo=ratmine_logo.png
+#intermines.ratmine.bgcolor=#ABC2DA
+#intermines.ratmine.frontcolor=#000
+#intermines.ratmine.defaultValues=R. norvegicus
+#intermines.ratmine.defaultMapping=remote
 
 intermines.yeastmine.url=http://yeastmine.yeastgenome.org/yeastmine
 intermines.yeastmine.name=YeastMine
