--- a/targetmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/targetmine/dbmodel/resources/objectstoresummary.config.properties
@@ -12,7 +12,6 @@ org.intermine.model.bio.GOEvidenceCode.fields = code
 org.intermine.model.bio.GOTerm.fields = namespace
 org.intermine.model.bio.OntologyTerm.fields = namespace
 org.intermine.model.bio.Interaction.fields = role interactionType
-#org.intermine.model.bio.GeneHomolog.fields = type
 org.intermine.model.bio.Pathway.fields = mainClass subClass
 org.intermine.model.bio.DrugType.fields = name
 org.intermine.model.bio.ProteinDomainRegion.fields = originalDb
@@ -20,6 +19,7 @@ org.intermine.model.bio.ProteinDomainRegion.fields = originalDb
 org.intermine.model.bio.StitchInteraction.fields = evidence
 
 org.intermine.model.bio.Gene.fields = type
+org.intermine.model.bio.Homologue.fields = type
 
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
