--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -75,7 +75,7 @@ attributelink.ligandexpo.HetGroup.*.hetId.url=http://ligand-expo.rcsb.org/pyapps
 attributelink.ligandexpo.HetGroup.*.hetId.text=Ligand Expo: <<attributeValue>>
 
 
-
+openid.allowed = false
 
 # Header - these will populate the top right navigation 
 #header.links=help,FAQ,about,cite,software
@@ -93,7 +93,8 @@ begin.query.classes = Gene,Protein
 # begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=ENSG00000084674,HGNC:7082,APOB,TINP1,VISA,TIMP-1
+#bag.example.identifiers=ENSG00000084674,HGNC:7082,APOB,TINP1,VISA,TIMP-1
+bag.example.identifiers=1080,125,217,2944,2947,2950,2952,3105,3106,3107,3115,3119,3123,3265,3304,3458,3586,3856,4257,5444,54576,54577,54578,54658,5644,6648,6690,7040,7124,847,929
 
 # examples for the quicksearch
 quickSearch.identifiers = e.g. STAT1, TP53
