--- a/targetmine/webapp/src/log4j.properties
+++ b/targetmine/webapp/src/log4j.properties
@@ -14,7 +14,8 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %l - %m%n
 
 log4j.appender.A1=org.apache.log4j.RollingFileAppender
-log4j.appender.A1.File=logs/targetmine.log
+#log4j.appender.A1.File=logs/targetmine.log
+log4j.appender.A1.File=/var/log/targetmine/targetmine.log
 log4j.appender.A1.BufferedIO=false
 log4j.appender.A1.Threshold=INFO
 log4j.appender.A1.MaxFileSize=500MB
@@ -35,7 +36,8 @@ log4j.logger.sqllogger = INFO, QUERY
 # Must be set, else sqllogger inherits appenders from rootLogger
 log4j.additivity.sqllogger = false
 log4j.appender.QUERY=org.apache.log4j.RollingFileAppender
-log4j.appender.QUERY.File=logs/query.log                    
+#log4j.appender.QUERY.File=logs/query.log                    
+log4j.appender.QUERY.File=/var/log/targetmine/query.log                    
 log4j.appender.QUERY.BufferedIO=false                    
 log4j.appender.QUERY.MaxFileSize=500MB                   
 log4j.appender.QUERY.MaxBackupIndex=10                   
