Add CATH enrichment widget, and some minor fix of seb settings. Fix CATH converter.
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@942 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -23,6 +23,7 @@ Enzyme = ecNumber
 ScopClassification = sid
 CompoundGroup = identifier, name
 Compound = identifier, name
+CathClassification = cathCode
 
 #Should be comment out for external server
 Disease = omimId
