--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -66,6 +66,9 @@ attributelink.drugbank.Drug.*.drugBankId.text=DrugBank Drug Card: <<attributeVal
 attributelink.fundo.DOTerm.*.identifier.url=http://django.nubic.northwestern.edu/fundo/databrowse/do_rif/doterm/objects/<<attributeValue>>
 attributelink.fundo.DOTerm.*.identifier.text=FunDO: <<attributeValue>>
 
+attributelink.cath.CathClassification.*.cathCode.url=http://www.cathdb.info/cathnode/<<attributeValue>>
+attributelink.cath.CathClassification.*.cathCode.text=CATH: <<attributeValue>>
+
 # chenyian: may need to remove if the chemical compound model is refined
 attributelink.pubchem.PubChemCompound.*.pubChemCid.url=http://pubchem.ncbi.nlm.nih.gov/summary/summary.cgi?cid=<<attributeValue>>
 attributelink.pubchem.PubChemCompound.*.pubChemCid.text=PubChem Compound: <<attributeValue>>
@@ -147,18 +150,18 @@ begin.tabs.3.name = Domain
 begin.tabs.3.description = TargetMine loads protein domain annotation from IPI and Integr8.
 begin.tabs.4.id = Protein Structure
 begin.tabs.4.name = Structure
-begin.tabs.4.description = TargetMine loads protein structure data from PDB and SCOP.
+begin.tabs.4.description = TargetMine loads protein structure data including PDB, SCOP and CATH.
 begin.tabs.5.id = Interactions
 begin.tabs.5.description = TargetMine loads physical interactions from BioGRID, iRefindex and PPIView.
 begin.tabs.6.id = Pathways
 begin.tabs.6.description = TargetMine loads pathway data from KEGG, Reactome and NCI pathway.
-begin.tabs.7.id = Enzymes
-begin.tabs.7.description = TargetMine loads enzyme data from the enzyme nomenclature database.
+#begin.tabs.7.id = Enzymes
+#begin.tabs.7.description = TargetMine loads enzyme data from the enzyme nomenclature database.
 begin.tabs.8.id = Compounds
 begin.tabs.8.description = The compound data in TargetMine comes from several data sources, including \
 Drugbank, STITCH, ChEBI and PubChem.
 # chenyian: Disable for external server
-begin.tabs.9.id = Disease
-begin.tabs.9.description = TargetMine loads disease data from OMIM.
+# begin.tabs.9.id = Disease
+# begin.tabs.9.description = TargetMine loads disease data from OMIM.
 
 ##################################################
