--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -99,13 +99,13 @@ lists that have already been created.
 # used on the linkouts section of the list analysis page
 # NOTE: name has to match the `project.title` in your properties file
 
-intermines.modmine.url=http://intermine.modencode.org/query
-intermines.modmine.name=modMine
-intermines.modmine.logo=modminelogo.png
-intermines.modmine.bgcolor=#396A81
-intermines.modmine.frontcolor=#FFF
-intermines.modmine.defaultValues=D. melanogaster,C. elegans
-intermines.modmine.defaultMapping=remote
+#intermines.modmine.url=http://intermine.modencode.org/query
+#intermines.modmine.name=modMine
+#intermines.modmine.logo=modminelogo.png
+#intermines.modmine.bgcolor=#396A81
+#intermines.modmine.frontcolor=#FFF
+#intermines.modmine.defaultValues=D. melanogaster,C. elegans
+#intermines.modmine.defaultMapping=remote
 
 intermines.flymine.url=http://www.flymine.org/query
 intermines.flymine.name=FlyMine
@@ -131,13 +131,13 @@ intermines.yeastmine.frontcolor=#FFF
 intermines.yeastmine.defaultValues=S. cerevisiae
 intermines.yeastmine.defaultMapping=remote
 
-intermines.zfinmine.url=http://zmine.zfin.org/zfinmine
-intermines.zfinmine.name=ZFINMine
-intermines.zfinmine.logo=zfinlogo.png
-intermines.zfinmine.bgcolor=#D5D5D5
-intermines.zfinmine.frontcolor=#000
-intermines.zfinmine.defaultValues=D. rerio
-intermines.zfinmine.defaultMapping=remote
+#intermines.zfinmine.url=http://zmine.zfin.org/zfinmine
+#intermines.zfinmine.name=ZFINMine
+#intermines.zfinmine.logo=zfinlogo.png
+#intermines.zfinmine.bgcolor=#D5D5D5
+#intermines.zfinmine.frontcolor=#000
+#intermines.zfinmine.defaultValues=D. rerio
+#intermines.zfinmine.defaultMapping=remote
 
 intermines.metabolicmine.url=http://www.metabolicmine.org/beta
 intermines.metabolicmine.name=metabolicMine
