A stable version base on InterMine 0.98
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@943 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -24,6 +24,7 @@ ScopClassification = sid
 CompoundGroup = identifier, name
 Compound = identifier, name
 CathClassification = cathCode
+ScopEntry=sunid, sccs
 
 #Should be comment out for external server
 Disease = omimId
