--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -77,6 +77,22 @@ attributelink.chebi.ChebiCompound.*.chebiId.text=ChEBI: <<attributeValue>>
 attributelink.ligandexpo.HetGroup.*.hetId.url=http://ligand-expo.rcsb.org/pyapps/ldHandler.py?formid=cc-index-search&operation=ccid&target=<<attributeValue>>
 attributelink.ligandexpo.HetGroup.*.hetId.text=Ligand Expo: <<attributeValue>>
 
+# chenyian: setting for pathway, to be confirmed
+attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/www_bget?<<attributeValue>>
+attributelink.KEGG.Pathway.*.identifier.text=KEGG: <<attributeValue>>
+attributelink.KEGG.Pathway.*.identifier.imageName=KEGG_logo_mini.gif
+attributelink.KEGG.Pathway.*.identifier.dataset=KEGG pathways data set
+
+attributelink.reactome.Pathway.*.identifier.url=http://www.reactome.org/cgi-bin/eventbrowser_st_id?ST_ID=<<attributeValue>>
+attributelink.reactome.Pathway.*.identifier.text=Reactome: <<attributeValue>>
+attributelink.reactome.Pathway.*.identifier.imageName=Reactome_logo.png
+attributelink.reactome.Pathway.*.identifier.dataset=Reactome data set
+
+attributelink.ncipathway.Pathway.*.identifier.url=http://pid.nci.nih.gov/search/pathway_landing.shtml?source=NCI-Nature%20curated&what=graphic&jpg=on&ppage=1&pathway_id=<<attributeValue>>
+attributelink.ncipathway.Pathway.*.identifier.text=Pathway Interaction Database: <<attributeValue>>
+attributelink.ncipathway.Pathway.*.identifier.imageName=nci_logo.png
+attributelink.ncipathway.Pathway.*.identifier.dataset=NCI-Nature data set
+# end of pathway configuration
 
 openid.allowed = false
 
