git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@955 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/targetmine/webapp/resources/model.properties
+++ b/targetmine/webapp/resources/model.properties
@@ -1,7 +1,7 @@
 # Model specific internationalisation properties
 # this file merges with InterMineWebApp.properties
 
-funding = TargetMine is funded by <a href="http://www.nedo.go.jp/" target="_new" title="New Energy and Industrial Technology Development Organization">NEDO</a>. Developed by <a href="http://mizuguchilab.org/" target="_new">The Mizuguchi Laboratory</a>. <a href="http://www.nibio.go.jp/" target="_new" title="National Institute of Biomedical Innovation"><img src="model/images/logo_nibio_full.png" border="0" alt="NIBIO_logo"></a>
+funding = TargetMine is developed by <a href="http://mizuguchilab.org/" target="_new">The Mizuguchi Laboratory</a> at <a href="http://www.nibio.go.jp/" target="_new" title="National Institute of Biomedical Innovation"><img src="/targetmine/model/images/logo_nibio_full.png" border="0" alt="NIBIO_logo"></a>
 
 fasta.export.classes = SequenceFeature,Protein
 
