--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -37,7 +37,7 @@ attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.
 attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
 # chenyian: Should be comment out for external server
-attributelink.omim.Disease.*.omimId.url=http://www.ncbi.nlm.nih.gov/entrez/dispomim.cgi?id=<<attributeValue>>
+attributelink.omim.Disease.*.omimId.url=http://omim.org/entry/<<attributeValue>>
 attributelink.omim.Disease.*.omimId.text=OMIM: <<attributeValue>>
 attributelink.omim.Disease.*.omimId.imageName=OMIM_logo_mini.png
 
@@ -49,9 +49,9 @@ attributelink.pdb.ProteinStructure.*.pdbId.imageName=PDB_logo_mini.gif
 #attributelink.pdb.ProteinChain.*.pdbId.text=PDB: <<attributeValue>>
 #attributelink.pdb.ProteinChain.*.pdbId.imageName=PDB_logo_mini.gif
 
-attributelink.pdb.ChemicalCompound.*.compId.url=http://www.rcsb.org/pdb/ligand/ligandsummary.do?hetId=<<attributeValue>>
-attributelink.pdb.ChemicalCompound.*.compId.text=PDB Ligand Summary: <<attributeValue>>
-attributelink.pdb.ChemicalCompound.*.compId.imageName=PDB_logo_mini.gif
+attributelink.pdb.HetGroup.*.hetId.url=http://www.rcsb.org/pdb/ligand/ligandsummary.do?hetId=<<attributeValue>>
+attributelink.pdb.HetGroup.*.hetId.text=PDB Ligand Summary: <<attributeValue>>
+attributelink.pdb.HetGroup.*.hetId.imageName=PDB_logo_mini.gif
 
 attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=
 attributelink.PubMed.Publication.*.pubMedId.text=PMID: <<attributeValue>>
@@ -94,6 +94,23 @@ attributelink.ncipathway.Pathway.*.identifier.imageName=nci_logo.png
 attributelink.ncipathway.Pathway.*.identifier.dataset=NCI-Nature data set
 # end of pathway configuration
 
+# CrossReferencelink
+xreflink.UniGene.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=unigene&term=
+xreflink.GENE3D.url=http://www.cathdb.info/cathnode/
+xreflink.RefSeq.url=http://www.ncbi.nlm.nih.gov/entrez/viewer.fcgi?val=
+xreflink.HAMAP.url=http://www.expasy.org/unirule/
+xreflink.PANTHER.url=http://www.pantherdb.org/panther/family.do?clsAccession=
+xreflink.PFAM.url=http://pfam.sanger.ac.uk/family?
+xreflink.PIRSF.url=http://pir.georgetown.edu/cgi-bin/ipcSF?id=
+xreflink.PRINTS.url=http://www.bioinf.manchester.ac.uk/cgi-bin/dbbrowser/sprint/searchprintss.cgi?display_opts=Prints&category=None&queryform=false&prints_accn=
+xreflink.PRODOM.url=http://prodom.prabi.fr/prodom/current/cgi-bin/request.pl?question=DBEN&query=
+xreflink.PROFILE.url=http://expasy.org/prosite/
+xreflink.PROSITE.url=http://expasy.org/prosite/
+xreflink.SMART.url=http://smart.embl-heidelberg.de/smart/do_annotation.pl?ACC=
+xreflink.SSF.url=http://supfam.org/SUPERFAMILY/cgi-bin/scop.cgi?ipid=
+xreflink.TIGRFAMs.url=http://cmr.jcvi.org/cgi-bin/CMR/HmmReport.cgi?hmm_acc=
+
+
 openid.allowed = false
 
 # Header - these will populate the top right navigation 
@@ -114,10 +131,11 @@ begin.query.classes = Gene,Protein
 # list upload example
 #bag.example.identifiers=ENSG00000084674,HGNC:7082,APOB,TINP1,VISA,TIMP-1
 bag.example.identifiers=1080,125,217,2944,2947,2950,2952,3105,3106,3107,3115,3119,3123,3265,3304,3458,3586,3856,4257,5444,54576,54577,54578,54658,5644,6648,6690,7040,7124,847,929
+bag.example.identifiers.protein=P13500, P14174, P20292, B4DVM1, P02741, P05231, P01375, P01903, Q5Y7D3, Q5Y7A9, Q5Y7D6, P01911, P01920, Q29974, P01912
 
 # examples for the quicksearch
 quickSearch.identifiers = e.g. STAT1, TP53
-textarea.identifiers = e.g. APOB, ENSG00000084674, P04114, breast cancer
+#textarea.identifiers = e.g. APOB, ENSG00000084674, P04114, breast cancer
 
 meta.keywords = microarray, bioinformatics, genomics, drug discovery, target discovery
 meta.description = Integrated queryable database for target discovery
@@ -127,6 +145,10 @@ meta.description = Integrated queryable database for target discovery
 layout.fixed = begin,template,templates,bag,customQuery,query,error,api,dataCategories
 theme = grey
 
+# galaxy
+## set to "false" to disable galaxy
+galaxy.display = false
+galaxy.disabledMessage = Galaxy export is disabled.
 
 ################ begin.jsp (homepage) config ################
 
@@ -146,6 +168,7 @@ begin.listBox.example = e.g. ENSG00000084674,APOB,TINP1,VISA,TIMP-1
 
 # third box
 begin.thirdBox.title = First Time Here?
+begin.thirdBox.visitedTitle = Welcome Back!
 begin.thirdBox.description = TargetMine integrates many types of data for human, \
 rat, mouse and <em>Drosophila</em>. \
 You can run flexible queries, export results and analyse lists of data.
