--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -25,6 +25,7 @@ CompoundGroup = identifier, name
 Compound = identifier, name
 CathClassification = cathCode
 ScopEntry=sunid, sccs
+GeneSetCluster=identifier
 
 #Should be comment out for external server
 Disease = omimId
