Refine compound model; add new source: chembl-db
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@960 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -566,6 +566,8 @@ bagBuild.helpText=<ul><li>Separate identifiers by a <strong>comma</strong>, <str
 <strong>tab</strong> or <strong>new line</strong>.</li> \
 <li>Qualify any identifiers that contain whitespace with double quotes like so:  "even skipped".</li></ul>
 bagBuild.caseSensitive = Match on case
+#chenyian
+bagBuild.removeVersionTag = Remove version tags
 
 bagUploadConfirm.title = List Confirmation
 bagUploadConfirm.description = Confirm list creation
