git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@964 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -60,8 +60,19 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
 
-attributelink.drugbank.Drug.*.drugBankId.url=http://www.drugbank.ca/drugs/<<attributeValue>>
-attributelink.drugbank.Drug.*.drugBankId.text=DrugBank Drug Card: <<attributeValue>>
+#attributelink.drugbank.Drug.*.drugBankId.url=http://www.drugbank.ca/drugs/<<attributeValue>>
+#attributelink.drugbank.Drug.*.drugBankId.text=DrugBank Drug Card: <<attributeValue>>
+
+attributelink.drugbank.DrugCompound.*.drugBankId.url=http://www.drugbank.ca/drugs/<<attributeValue>>
+attributelink.drugbank.DrugCompound.*.drugBankId.text=DrugBank: <<attributeValue>>
+attributelink.chebi.ChebiCompound.*.chebiId.url=http://www.ebi.ac.uk/chebi/searchId.do?chebiId=CHEBI:<<attributeValue>>
+attributelink.chebi.ChebiCompound.*.chebiId.text=ChEBI: <<attributeValue>>
+attributelink.chembl.ChemblCompound.*.chemblId.url=https://www.ebi.ac.uk/chembldb/compound/inspect/<<attributeValue>>
+attributelink.chembl.ChemblCompound.*.chemblId.text=ChEMBL: <<attributeValue>>
+attributelink.pubchem.PubChemCompound.*.pubChemCid.url=http://pubchem.ncbi.nlm.nih.gov/summary/summary.cgi?cid=<<attributeValue>>
+attributelink.pubchem.PubChemCompound.*.pubChemCid.text=PubChem: <<attributeValue>>
+attributelink.pdbligand.PDBCompound.*.hetId.url=http://www.rcsb.org/pdb/ligand/ligandsummary.do?hetId=<<attributeValue>>
+attributelink.pdbligand.PDBCompound.*.hetId.text=RCSB PDB: <<attributeValue>>
 
 attributelink.fundo.DOTerm.*.identifier.url=http://django.nubic.northwestern.edu/fundo/databrowse/do_rif/doterm/objects/<<attributeValue>>
 attributelink.fundo.DOTerm.*.identifier.text=FunDO: <<attributeValue>>
@@ -70,27 +81,27 @@ attributelink.cath.CathClassification.*.cathCode.url=http://www.cathdb.info/cath
 attributelink.cath.CathClassification.*.cathCode.text=CATH: <<attributeValue>>
 
 # chenyian: may need to remove if the chemical compound model is refined
-attributelink.pubchem.PubChemCompound.*.pubChemCid.url=http://pubchem.ncbi.nlm.nih.gov/summary/summary.cgi?cid=<<attributeValue>>
-attributelink.pubchem.PubChemCompound.*.pubChemCid.text=PubChem Compound: <<attributeValue>>
-attributelink.chebi.ChebiCompound.*.chebiId.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=CHEBI%3A<<attributeValue>>
-attributelink.chebi.ChebiCompound.*.chebiId.text=ChEBI: <<attributeValue>>
-attributelink.ligandexpo.HetGroup.*.hetId.url=http://ligand-expo.rcsb.org/pyapps/ldHandler.py?formid=cc-index-search&operation=ccid&target=<<attributeValue>>
-attributelink.ligandexpo.HetGroup.*.hetId.text=Ligand Expo: <<attributeValue>>
+#attributelink.pubchem.PubChemCompound.*.pubChemCid.url=http://pubchem.ncbi.nlm.nih.gov/summary/summary.cgi?cid=<<attributeValue>>
+#attributelink.pubchem.PubChemCompound.*.pubChemCid.text=PubChem Compound: <<attributeValue>>
+#attributelink.chebi.ChebiCompound.*.chebiId.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=CHEBI%3A<<attributeValue>>
+#attributelink.chebi.ChebiCompound.*.chebiId.text=ChEBI: <<attributeValue>>
+#attributelink.ligandexpo.HetGroup.*.hetId.url=http://ligand-expo.rcsb.org/pyapps/ldHandler.py?formid=cc-index-search&operation=ccid&target=<<attributeValue>>
+#attributelink.ligandexpo.HetGroup.*.hetId.text=Ligand Expo: <<attributeValue>>
 
 # chenyian: setting for pathway, to be confirmed
 attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/www_bget?<<attributeValue>>
 attributelink.KEGG.Pathway.*.identifier.text=KEGG: <<attributeValue>>
-attributelink.KEGG.Pathway.*.identifier.imageName=KEGG_logo_mini.gif
+#attributelink.KEGG.Pathway.*.identifier.imageName=KEGG_logo_mini.gif
 attributelink.KEGG.Pathway.*.identifier.dataset=KEGG pathways data set
 
-attributelink.reactome.Pathway.*.identifier.url=http://www.reactome.org/cgi-bin/eventbrowser_st_id?ST_ID=<<attributeValue>>
+attributelink.reactome.Pathway.*.identifier.url=http://www.reactome.org/cgi-bin/link?SOURCE=Reactome&ID=<<attributeValue>>
 attributelink.reactome.Pathway.*.identifier.text=Reactome: <<attributeValue>>
-attributelink.reactome.Pathway.*.identifier.imageName=Reactome_logo.png
+#attributelink.reactome.Pathway.*.identifier.imageName=Reactome_logo.png
 attributelink.reactome.Pathway.*.identifier.dataset=Reactome data set
 
 attributelink.ncipathway.Pathway.*.identifier.url=http://pid.nci.nih.gov/search/pathway_landing.shtml?source=NCI-Nature%20curated&what=graphic&jpg=on&ppage=1&pathway_id=<<attributeValue>>
 attributelink.ncipathway.Pathway.*.identifier.text=Pathway Interaction Database: <<attributeValue>>
-attributelink.ncipathway.Pathway.*.identifier.imageName=nci_logo.png
+#attributelink.ncipathway.Pathway.*.identifier.imageName=nci_logo.png
 attributelink.ncipathway.Pathway.*.identifier.dataset=NCI-Nature data set
 # end of pathway configuration
 
