git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@971 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -5,8 +5,8 @@
 #           and which attribute can be clicked in the result table.
 
 BioEntity = primaryIdentifier, secondaryIdentifier
-Gene = ncbiGeneNumber, primaryIdentifier, symbol
-Protein = primaryAccession
+Gene = ncbiGeneNumber, symbol
+Protein = primaryAccession, uniprotAccession
 OntologyTerm = identifier, name
 Organism = name, shortName, taxonId
 Transcript = primaryIdentifier
@@ -18,11 +18,11 @@ ProteinStructure = pdbId
 ProteinChain = pdbId, identifier
 Pathway = identifier
 Enzyme = ecNumber
-ScopClassification = sid
 CompoundGroup = identifier, name
 Compound = identifier, name
+ScopClassification = sunid, sccs
 CathClassification = cathCode
-ScopEntry=sunid, sccs
+SNP=identifier
 GeneSetCluster=identifier
 
 #Should be comment out for external server
