--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -25,9 +25,6 @@ attributelink.ensembl.Gene.10116.primaryIdentifier.imageName=ensembl_logo_link.g
 attributelink.ensembl.Gene.10090.primaryIdentifier.url=http://www.ensembl.org/Mus_musculus/geneview?gene=<<attributeValue>>
 attributelink.ensembl.Gene.10090.primaryIdentifier.text=ensembl: <<attributeValue>>
 attributelink.ensembl.Gene.10090.primaryIdentifier.imageName=ensembl_logo_link.gif
-attributelink.ensembl.Gene.7227.primaryIdentifier.url=http://www.ensembl.org/Drosophila_melanogaster/geneview?db=core&gene=<<attributeValue>>
-attributelink.ensembl.Gene.7227.primaryIdentifier.text=ensembl: <<attributeValue>>
-attributelink.ensembl.Gene.7227.primaryIdentifier.imageName=ensembl_logo_link.gif
 
 attributelink.uniProt.Protein.*.primaryAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.primaryAccession.text=uniprot: <<attributeValue>>
@@ -48,10 +45,6 @@ attributelink.pdb.ProteinStructure.*.pdbId.imageName=PDB_logo_mini.gif
 #attributelink.pdb.ProteinChain.*.pdbId.url=http://www.rcsb.org/pdb/explore.do?structureId=<<attributeValue>>
 #attributelink.pdb.ProteinChain.*.pdbId.text=PDB: <<attributeValue>>
 #attributelink.pdb.ProteinChain.*.pdbId.imageName=PDB_logo_mini.gif
-
-attributelink.pdb.HetGroup.*.hetId.url=http://www.rcsb.org/pdb/ligand/ligandsummary.do?hetId=<<attributeValue>>
-attributelink.pdb.HetGroup.*.hetId.text=PDB Ligand Summary: <<attributeValue>>
-attributelink.pdb.HetGroup.*.hetId.imageName=PDB_logo_mini.gif
 
 attributelink.PubMed.Publication.*.pubMedId.url=http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=
 attributelink.PubMed.Publication.*.pubMedId.text=PMID: <<attributeValue>>
@@ -80,28 +73,17 @@ attributelink.fundo.DOTerm.*.identifier.text=FunDO: <<attributeValue>>
 attributelink.cath.CathClassification.*.cathCode.url=http://www.cathdb.info/cathnode/<<attributeValue>>
 attributelink.cath.CathClassification.*.cathCode.text=CATH: <<attributeValue>>
 
-# chenyian: may need to remove if the chemical compound model is refined
-#attributelink.pubchem.PubChemCompound.*.pubChemCid.url=http://pubchem.ncbi.nlm.nih.gov/summary/summary.cgi?cid=<<attributeValue>>
-#attributelink.pubchem.PubChemCompound.*.pubChemCid.text=PubChem Compound: <<attributeValue>>
-#attributelink.chebi.ChebiCompound.*.chebiId.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=CHEBI%3A<<attributeValue>>
-#attributelink.chebi.ChebiCompound.*.chebiId.text=ChEBI: <<attributeValue>>
-#attributelink.ligandexpo.HetGroup.*.hetId.url=http://ligand-expo.rcsb.org/pyapps/ldHandler.py?formid=cc-index-search&operation=ccid&target=<<attributeValue>>
-#attributelink.ligandexpo.HetGroup.*.hetId.text=Ligand Expo: <<attributeValue>>
-
 # chenyian: setting for pathway, to be confirmed
 attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/www_bget?<<attributeValue>>
 attributelink.KEGG.Pathway.*.identifier.text=KEGG: <<attributeValue>>
-#attributelink.KEGG.Pathway.*.identifier.imageName=KEGG_logo_mini.gif
 attributelink.KEGG.Pathway.*.identifier.dataset=KEGG pathways data set
 
 attributelink.reactome.Pathway.*.identifier.url=http://www.reactome.org/cgi-bin/link?SOURCE=Reactome&ID=<<attributeValue>>
 attributelink.reactome.Pathway.*.identifier.text=Reactome: <<attributeValue>>
-#attributelink.reactome.Pathway.*.identifier.imageName=Reactome_logo.png
 attributelink.reactome.Pathway.*.identifier.dataset=Reactome data set
 
 attributelink.ncipathway.Pathway.*.identifier.url=http://pid.nci.nih.gov/search/pathway_landing.shtml?source=NCI-Nature%20curated&what=graphic&jpg=on&ppage=1&pathway_id=<<attributeValue>>
 attributelink.ncipathway.Pathway.*.identifier.text=Pathway Interaction Database: <<attributeValue>>
-#attributelink.ncipathway.Pathway.*.identifier.imageName=nci_logo.png
 attributelink.ncipathway.Pathway.*.identifier.dataset=NCI-Nature data set
 # end of pathway configuration
 
@@ -181,7 +163,7 @@ begin.listBox.example = e.g. ENSG00000084674,APOB,TINP1,VISA,TIMP-1
 begin.thirdBox.title = First Time Here?
 begin.thirdBox.visitedTitle = Welcome Back!
 begin.thirdBox.description = TargetMine integrates many types of data for human, \
-rat, mouse and <em>Drosophila</em>. \
+rat and mouse. \
 You can run flexible queries, export results and analyse lists of data.
 begin.thirdBox.link = http://targetmine.nibio.go.jp/targetmine_tour/
 begin.thirdBox.linkTitle = Tutorials
@@ -191,13 +173,12 @@ begin.tabs.1.id = Genomics
 # popular templates in tabs, your chosen name
 begin.tabs.1.name = Genes
 # popular templates in tabs, your chosen description
-begin.tabs.1.description = The gene models and other genome annotation in TargetMine are provided \
-by a variety of curated source databases..
+begin.tabs.1.description = TargetMine loads gene information from Entrez Gene.
 begin.tabs.2.id = Proteins
-begin.tabs.2.description = TargetMine loads proteins from UniProt, and protein domains from InterPro.
+begin.tabs.2.description = TargetMine loads protein information from UniProt.
 begin.tabs.3.id = Protein Domain
 begin.tabs.3.name = Domain
-begin.tabs.3.description = TargetMine loads protein domain annotation from IPI and Integr8.
+begin.tabs.3.description = TargetMine loads protein domain annotation from InterPro.
 begin.tabs.4.id = Protein Structure
 begin.tabs.4.name = Structure
 begin.tabs.4.description = TargetMine loads protein structure data including PDB, SCOP and CATH.
@@ -209,9 +190,6 @@ begin.tabs.6.description = TargetMine loads pathway data from KEGG, Reactome and
 #begin.tabs.7.description = TargetMine loads enzyme data from the enzyme nomenclature database.
 begin.tabs.8.id = Compounds
 begin.tabs.8.description = The compound data in TargetMine comes from several data sources, including \
-Drugbank, STITCH, ChEBI and PubChem.
-# chenyian: Disable for external server
-# begin.tabs.9.id = Disease
-# begin.tabs.9.description = TargetMine loads disease data from OMIM.
+Drugbank, STITCH, ChEBI , ChEMBL and PubChem.
 
 ##################################################
