git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@972 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -22,8 +22,9 @@ CompoundGroup = identifier, name
 Compound = identifier, name
 ScopClassification = sunid, sccs
 CathClassification = cathCode
+StructuralClassification = code 
 SNP=identifier
-GeneSetCluster=identifier
 
 #Should be comment out for external server
+GeneSetCluster=identifier
 Disease = omimId
