--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -24,6 +24,7 @@ ScopClassification = sunid, sccs
 CathClassification = cathCode
 StructuralClassification = code 
 SNP=identifier
+ProbeSet=probeSetId
 
 #Should be comment out for external server
 GeneSetCluster=identifier
