--- a/intermine/webapp/main/resources/webapp/WEB-INF/web.xml
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/web.xml
@@ -1131,6 +1131,8 @@
   </session-config>
 
   <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
