edit some web display settings

--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -12,9 +12,9 @@
 #     attribute/organism/class combination
 # 5. logo images should be located in bio/webapp/resources/webapp/model/images/
 
-attributelink.entrez_gene.Gene.*.ncbiGeneNumber.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=gene&cmd=Retrieve&dopt=full_report&list_uids=<<attributeValue>>
-attributelink.entrez_gene.Gene.*.ncbiGeneNumber.text=Entrez Gene: <<attributeValue>>
-attributelink.entrez_gene.Gene.*.ncbiGeneNumber.imageName=entrezgene_logo_link.png
+attributelink.entrez_gene.Gene.*.ncbiGeneId.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=gene&cmd=Retrieve&dopt=full_report&list_uids=<<attributeValue>>
+attributelink.entrez_gene.Gene.*.ncbiGeneId.text=Entrez Gene: <<attributeValue>>
+attributelink.entrez_gene.Gene.*.ncbiGeneId.imageName=entrezgene_logo_link.png
 
 attributelink.ensembl.Gene.9606.primaryIdentifier.url=http://www.ensembl.org/Homo_sapiens/geneview?gene=<<attributeValue>>
 attributelink.ensembl.Gene.9606.primaryIdentifier.text=ensembl: <<attributeValue>>
@@ -53,9 +53,6 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
 
-#attributelink.drugbank.Drug.*.drugBankId.url=http://www.drugbank.ca/drugs/<<attributeValue>>
-#attributelink.drugbank.Drug.*.drugBankId.text=DrugBank Drug Card: <<attributeValue>>
-
 attributelink.drugbank.DrugCompound.*.drugBankId.url=http://www.drugbank.ca/drugs/<<attributeValue>>
 attributelink.drugbank.DrugCompound.*.drugBankId.text=DrugBank: <<attributeValue>>
 attributelink.chebi.ChebiCompound.*.chebiId.url=http://www.ebi.ac.uk/chebi/searchId.do?chebiId=CHEBI:<<attributeValue>>
@@ -85,6 +82,13 @@ attributelink.reactome.Pathway.*.identifier.dataset=Reactome data set
 attributelink.ncipathway.Pathway.*.identifier.url=http://pid.nci.nih.gov/search/pathway_landing.shtml?source=NCI-Nature%20curated&what=graphic&jpg=on&ppage=1&pathway_id=<<attributeValue>>
 attributelink.ncipathway.Pathway.*.identifier.text=Pathway Interaction Database: <<attributeValue>>
 attributelink.ncipathway.Pathway.*.identifier.dataset=NCI-Nature data set
+
+attributelink.mirbase.MiRNA.*.primaryIdentifier.url=http://www.mirbase.org/cgi-bin/mature.pl?mature_acc=<<attributeValue>>
+attributelink.mirbase.MiRNA.*.primaryIdentifier.text=miRBase: <<attributeValue>>
+attributelink.mirbase.MiRNAPrimaryTranscript.*.primaryIdentifier.url=http://www.mirbase.org/cgi-bin/mirna_entry.pl?acc=<<attributeValue>>
+attributelink.mirbase.MiRNAPrimaryTranscript.*.primaryIdentifier.text=miRBase: <<attributeValue>>
+attributelink.mirbase.MiRNAInteraction.*.sourceId.url=http://mirtarbase.mbc.nctu.edu.tw/php/detail.php?mirtid=<<attributeValue>>
+attributelink.mirbase.MiRNAInteraction.*.sourceId.text=miRTarBase: <<attributeValue>>
 # end of pathway configuration
 
 # CrossReferencelink
