--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -149,7 +149,7 @@ galaxy.disabledMessage = Galaxy export is disabled.
 
 ################ begin.jsp (homepage) config ################
 
-links.blog = news/index.html
+#links.blog = news/index.html
 
 # search box
 begin.searchBox.title = Search
