--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -129,6 +129,7 @@ begin.query.classes = Gene,Protein
 #bag.example.identifiers=ENSG00000084674,HGNC:7082,APOB,TINP1,VISA,TIMP-1
 bag.example.identifiers=1080,125,217,2944,2947,2950,2952,3105,3106,3107,3115,3119,3123,3265,3304,3458,3586,3856,4257,5444,54576,54577,54578,54658,5644,6648,6690,7040,7124,847,929
 bag.example.identifiers.protein=P13500, P14174, P20292, B4DVM1, P02741, P05231, P01375, P01903, Q5Y7D3, Q5Y7A9, Q5Y7D6, P01911, P01920, Q29974, P01912
+bag.example.identifiers.probeset=1437372_at, 1435036_at, 1454646_at, 1419075_s_at, 1423166_at, 1416281_at, 1460335_at, 1456437_x_at, 1432442_at, 1448148_at, 1427284_a_at, 1449110_at, 1452262_at, 1424758_s_at, 1448817_at, 1440608_at, 1426873_s_at, 1453384_at, 1449027_at, 1434174_at
 
 # examples for the quicksearch
 quickSearch.identifiers = e.g. STAT1, TP53
