Move the InterMine version to model.properties

--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -170,7 +170,7 @@ begin.thirdBox.visitedTitle = Welcome Back!
 begin.thirdBox.description = TargetMine integrates many types of data for human, \
 rat and mouse. \
 You can run flexible queries, export results and analyse lists of data.
-begin.thirdBox.link = http://targetmine.nibio.go.jp/targetmine_tour/
+begin.thirdBox.link = http://targetmine.nibio.go.jp/tutorials
 begin.thirdBox.linkTitle = Tutorials
 
 # popular templates in tabs, template category (key identifier)
