Change the aspect Genomics to Genes

--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -174,7 +174,7 @@ begin.thirdBox.link = http://targetmine.nibio.go.jp/tutorials
 begin.thirdBox.linkTitle = Tutorials
 
 # popular templates in tabs, template category (key identifier)
-begin.tabs.1.id = Genomics
+begin.tabs.1.id = Genes
 # popular templates in tabs, your chosen name
 begin.tabs.1.name = Genes
 # popular templates in tabs, your chosen description
