add external link for GO and DO to EBI OLS

--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -66,6 +66,11 @@ attributelink.pdbligand.PDBCompound.*.hetId.text=RCSB PDB: <<attributeValue>>
 
 attributelink.fundo.DOTerm.*.identifier.url=http://django.nubic.northwestern.edu/fundo/databrowse/do_rif/doterm/objects/<<attributeValue>>
 attributelink.fundo.DOTerm.*.identifier.text=FunDO: <<attributeValue>>
+attributelink.olsebi.DOTerm.*.identifier.url=http://www.ebi.ac.uk/ontology-lookup/browse.do?ontName=DOID&termId=<<attributeValue>>
+attributelink.olsebi.DOTerm.*.identifier.text=OLS: <<attributeValue>>
+
+attributelink.olsebi.GOTerm.*.identifier.url=http://www.ebi.ac.uk/ontology-lookup/browse.do?ontName=GO&termId=<<attributeValue>>
+attributelink.olsebi.GOTerm.*.identifier.text=OLS: <<attributeValue>>
 
 attributelink.cath.CathClassification.*.cathCode.url=http://www.cathdb.info/cathnode/<<attributeValue>>
 attributelink.cath.CathClassification.*.cathCode.text=CATH: <<attributeValue>>
