use Gene ID as Gene.primaryIdentifier

--- a/targetmine/webapp/resources/web.properties
+++ b/targetmine/webapp/resources/web.properties
@@ -12,19 +12,23 @@
 #     attribute/organism/class combination
 # 5. logo images should be located in bio/webapp/resources/webapp/model/images/
 
-attributelink.entrez_gene.Gene.*.ncbiGeneId.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=gene&cmd=Retrieve&dopt=full_report&list_uids=<<attributeValue>>
-attributelink.entrez_gene.Gene.*.ncbiGeneId.text=Entrez Gene: <<attributeValue>>
-attributelink.entrez_gene.Gene.*.ncbiGeneId.imageName=entrezgene_logo_link.png
+#attributelink.entrez_gene.Gene.*.ncbiGeneId.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=gene&cmd=Retrieve&dopt=full_report&list_uids=<<attributeValue>>
+#attributelink.entrez_gene.Gene.*.ncbiGeneId.text=Entrez Gene: <<attributeValue>>
+#attributelink.entrez_gene.Gene.*.ncbiGeneId.imageName=entrezgene_logo_link.png
 
-attributelink.ensembl.Gene.9606.primaryIdentifier.url=http://www.ensembl.org/Homo_sapiens/geneview?gene=<<attributeValue>>
-attributelink.ensembl.Gene.9606.primaryIdentifier.text=ensembl: <<attributeValue>>
-attributelink.ensembl.Gene.9606.primaryIdentifier.imageName=ensembl_logo_link.gif
-attributelink.ensembl.Gene.10116.primaryIdentifier.url=http://www.ensembl.org/Rattus_norvegicus/geneview?gene=<<attributeValue>>
-attributelink.ensembl.Gene.10116.primaryIdentifier.text=ensembl: <<attributeValue>>
-attributelink.ensembl.Gene.10116.primaryIdentifier.imageName=ensembl_logo_link.gif
-attributelink.ensembl.Gene.10090.primaryIdentifier.url=http://www.ensembl.org/Mus_musculus/geneview?gene=<<attributeValue>>
-attributelink.ensembl.Gene.10090.primaryIdentifier.text=ensembl: <<attributeValue>>
-attributelink.ensembl.Gene.10090.primaryIdentifier.imageName=ensembl_logo_link.gif
+attributelink.entrez.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=gene&cmd=Retrieve&dopt=full_report&list_uids=<<attributeValue>>
+attributelink.entrez.Gene.*.primaryIdentifier.text=Entrez Gene: <<attributeValue>>
+attributelink.entrez.Gene.*.primaryIdentifier.imageName=entrezgene_logo_link.png
+
+#attributelink.ensembl.Gene.9606.primaryIdentifier.url=http://www.ensembl.org/Homo_sapiens/geneview?gene=<<attributeValue>>
+#attributelink.ensembl.Gene.9606.primaryIdentifier.text=ensembl: <<attributeValue>>
+#attributelink.ensembl.Gene.9606.primaryIdentifier.imageName=ensembl_logo_link.gif
+#attributelink.ensembl.Gene.10116.primaryIdentifier.url=http://www.ensembl.org/Rattus_norvegicus/geneview?gene=<<attributeValue>>
+#attributelink.ensembl.Gene.10116.primaryIdentifier.text=ensembl: <<attributeValue>>
+#attributelink.ensembl.Gene.10116.primaryIdentifier.imageName=ensembl_logo_link.gif
+#attributelink.ensembl.Gene.10090.primaryIdentifier.url=http://www.ensembl.org/Mus_musculus/geneview?gene=<<attributeValue>>
+#attributelink.ensembl.Gene.10090.primaryIdentifier.text=ensembl: <<attributeValue>>
+#attributelink.ensembl.Gene.10090.primaryIdentifier.imageName=ensembl_logo_link.gif
 
 attributelink.uniProt.Protein.*.primaryAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.primaryAccession.text=uniprot: <<attributeValue>>
@@ -71,6 +75,13 @@ attributelink.olsebi.DOTerm.*.identifier.text=OLS: <<attributeValue>>
 
 attributelink.olsebi.GOTerm.*.identifier.url=http://www.ebi.ac.uk/ontology-lookup/browse.do?ontName=GO&termId=<<attributeValue>>
 attributelink.olsebi.GOTerm.*.identifier.text=OLS: <<attributeValue>>
+attributelink.quickgo.GOTerm.*.identifier.url=http://www.ebi.ac.uk/QuickGO/GTerm?id=<<attributeValue>>
+attributelink.quickgo.GOTerm.*.identifier.text=QuickGO: <<attributeValue>>
+
+attributelink.olsebi.GOSlimTerm.*.identifier.url=http://www.ebi.ac.uk/ontology-lookup/browse.do?ontName=GO&termId=<<attributeValue>>
+attributelink.olsebi.GOSlimTerm.*.identifier.text=OLS: <<attributeValue>>
+attributelink.quickgo.GOSlimTerm.*.identifier.url=http://www.ebi.ac.uk/QuickGO/GTerm?id=<<attributeValue>>
+attributelink.quickgo.GOSlimTerm.*.identifier.text=QuickGO: <<attributeValue>>
 
 attributelink.cath.CathClassification.*.cathCode.url=http://www.cathdb.info/cathnode/<<attributeValue>>
 attributelink.cath.CathClassification.*.cathCode.text=CATH: <<attributeValue>>
