--- a/targetmine/dbmodel/resources/class_keys.properties
+++ b/targetmine/dbmodel/resources/class_keys.properties
@@ -25,6 +25,7 @@ CathClassification = cathCode
 StructuralClassification = code 
 SNP=identifier
 ProbeSet=probeSetId
+MiRNAInteraction = identifier
 
 #Should be comment out for external server
 GeneSetCluster=identifier
