SQL updates for chembl_17

--- a/targetmine/default.intermine.integrate.properties
+++ b/targetmine/default.intermine.integrate.properties
@@ -95,3 +95,10 @@ db.chembl-db.driver=com.mysql.jdbc.Driver
 db.chembl-db.platform=MySQL
 db.chembl-db.datasource.dataSourceName=db.chembl-db
 db.chembl-db.datasource.maxConnections=10
+
+# chembl postgresql database
+db.chembl-psql.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.chembl-psql.driver=org.postgresql.Driver
+db.chembl-psql.platform=PostgreSQL
+db.chembl-psql.datasource.dataSourceName=db.pub-db
+db.chembl-psql.datasource.maxConnections=10
